--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>会計管理システム</title>
+    <title>DLC会計管理システム</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'accounting/css/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <button id="menuToggle" class="menu-toggle">☰</button>
-            <h1>会計管理システム</h1>
+            <h1>DLC会計管理システム</h1>
         </div>
         <nav class="main-nav" id="mainNav">
             <ul>
