--- a/accounting/templates/accounting/view_public_performance.html
+++ b/accounting/templates/accounting/view_public_performance.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="page-container">
-    <h2 class="page-title">公演費一覧</h2>
+    <h2 class="page-title2">公演費一覧</h2>
 
     {% for age, expenses in grouped_performance_expenses %}
     <div class="expense-group">
