--- a/accounting/templates/accounting/month_details.html
+++ b/accounting/templates/accounting/month_details.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="page-container">
-    <h2 class="page-title">{{ year }}年{{ month }}月の支出</h2>
+    <h2 class="page-title2">{{ year }}年{{ month }}月の支出</h2>
 
     <div class="sort-form">
         <form method="get">
