--- a/accounting/templates/accounting/input_category.html
+++ b/accounting/templates/accounting/input_category.html
@@ -25,7 +25,7 @@
         <div class="form-group">
             <label for="id_category_name" class="form-label">{{ form.category_name.label }}</label>
             {{ form.category_name }}
-            <small class="form-hint">公演費、月会費、ダンパ費のいずれかを選択してください。</small>
+            <small class="form-hint">公演費、月会費、ベースメント費のいずれかを選択してください。</small>
         </div>
         <div class="form-group">
             <label for="id_date">日付</label>
