--- a/accounting/templates/accounting/view_dance_party.html
+++ b/accounting/templates/accounting/view_dance_party.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="page-container">
-    <h2 class="page-title2">ダンパ費一覧</h2>
+    <h2 class="page-title2">ベースメント費一覧</h2>
 
     {% for age, expenses in grouped_dance_party_expenses %}
     <div class="expense-group">
