--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -25,7 +25,8 @@
                 <li><a href="{% url 'monthly_personal_expenses' %}">👤 月別個人支出</a></li>
                 <li><a href="{% url 'view_public_performance' %}">🎭 公演費まとめ</a></li>
                 <li><a href="{% url 'view_monthly_fee' %}">💰 月会費まとめ</a></li>
-                <li><a href="{% url 'view_dance_party' %}">🎉 ベースメント費まとめ</a></li>
+                <li><a href="{% url 'view_basement' %}">🎉 ベースメント費まとめ</a></li>
+                <li><a href="{% url 'member_list' %}">企画入力ページ</a></li>
             </ul>
         </nav>
     </header>
