--- a/accounting/templates/accounting/base.html
+++ b/accounting/templates/accounting/base.html
@@ -22,6 +22,8 @@
             <ul>
                 <li><a href="/">🏠 ホーム</a></li>
                 <li><a href="{% url 'create_expenses' %}">✏️ 係り活動入力フォーム</a></li>
+                <li><a href="{% url 'member_list' %}"> 企画入力ページ</a></li>
+                <li><a href="{% url 'tuuzyouki_expenses' %}"> 通常期入力ページ</a></li>
                 <li><a href="{% url 'input_category' %}">📅 通常期入力フォーム</a></li>
                 <li><a href="{% url 'department_expenses' %}">💼 係り別支出</a></li>
                 <li><a href="{% url 'age_expenses' %}">📊 代別支出</a></li>
@@ -29,7 +31,6 @@
                 <li><a href="{% url 'view_public_performance' %}">🎭 公演費まとめ</a></li>
                 <li><a href="{% url 'view_monthly_fee' %}">💰 月会費まとめ</a></li>
                 <li><a href="{% url 'view_basement' %}">🎉 ベースメント費まとめ</a></li>
-                <li><a href="{% url 'member_list' %}"> 企画入力ページ</a></li>
             </ul>
         </nav>
     </header>
